[tool.poetry]
name = "rag-advanced"
version = "0.1.0"
description = "testing different new RAG architecture"
authors = ["Santos <santoslukombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
