[tool.poetry]
name = "rag-advanced"
version = "0.1.0"
description = "testing different new RAG architecture"
authors = ["Santos <santoslukombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gradio = "4.44.1"
langchain = "^0.3.9"
ollama = "^0.4.2"
pymilvus = "^2.5.0"
langchain-community = "^0.3.8"
pdfplumber = "^0.11.4"
langchain-ollama = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
